Prevent navbar from pushing content down on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
 	background-color: rgb(24 24 27);
 	/* background-image: url(https://chriscourses.com/_nuxt/img/stars.af9e04c.svg); */
 	overflow-x: hidden;
+	position: relative;
 }
 
 .background-video {
@@ -72,14 +73,26 @@ a {
 }
 
 header {
-	padding: 0 10px;
+	/* padding: 0 10px;
     display: flex;
+    justify-content: space-between;
+	height: 100%;
+    border-bottom: 1px solid rgb(255 251 230);
+	background-color: rgb(24 24 27); */
+
+	padding: 0 10px;
+    display: flex
+;
     justify-content: space-between;
     /* max-width: 1440px; */
     /* margin: auto; */
-	height: 100%;
+    height: fit-content;
     border-bottom: 1px solid rgb(255 251 230);
-	background-color: rgb(24 24 27);
+    background-color: rgb(24 24 27);
+    position: absolute;
+    /* background-color: black; */
+    z-index: 1;
+    width: 100%;
 
 	.logo-holder {
 		display:flex;
@@ -849,7 +862,8 @@ footer div a {
     display: flex;
     align-items: center;
     padding: 2rem 0;
-	padding-top: 5rem;
+	/* padding-top: 5rem; */
+	padding-top: 10rem;
 }
 
 .hero-content {
